--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <title>연습용 페이지</title>
 </head>
 <body>
-안녕하세요, 반갑습니다.ㅎㅎ
-<h1>h1입니다</h1>
-<h4>h4입니다</h4>
-<p>p문입니다</p>
 <div>Teachable Machine Image Model</div>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
@@ -65,6 +61,6 @@
             labelContainer.childNodes[i].innerHTML = classPrediction;
         }
     }
-</script>  
-</body>
+</script></body>
+</html></body>
 </html>
