--- a/index.html
+++ b/index.html
@@ -3,73 +3,151 @@
 <title>연습용 페이지</title>
 </head>
 <body>
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-<script type="text/javascript">
-    // More API functions here:
-    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>왼쪽/오른쪽 인공지능 분류기</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f0f4f8;
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-    // the link to your model provided by Teachable Machine export panel
+    .container {
+      max-width: 500px;
+      background-color: #ffffff;
+      border-radius: 1rem;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+      padding: 2rem;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      color: #1f2937;
+      margin-bottom: 0.5rem;
+    }
+
+    p.description {
+      font-size: 1rem;
+      color: #4b5563;
+      margin-bottom: 2rem;
+    }
+
+    button {
+      background-color: #10b981;
+      color: white;
+      border: none;
+      border-radius: 0.5rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      margin-bottom: 1.5rem;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #059669;
+    }
+
+    #webcam-container {
+      margin-bottom: 1rem;
+      border-radius: 0.5rem;
+      overflow: hidden;
+    }
+
+    #result-display {
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #1d4ed8;
+      margin-top: 1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>왼쪽/오른쪽 분류 인공지능</h1>
+    <p class="description">왼쪽 또는 오른쪽으로 고개를 기울여 보세요.</p>
+    <button onclick="init()">AI 시작하기</button>
+    <div id="webcam-container"></div>
+    <div id="result-display">결과가 여기에 표시됩니다.</div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
+  <script>
     const URL = "https://teachablemachine.withgoogle.com/models/RgvMEoCmb/";
+    let model, webcam, maxPredictions;
+    let lastResult = ""; // 마지막으로 예측한 값 저장
 
-    let model, webcam, labelContainer, maxPredictions;
-
-    // Load the image model and setup the webcam
     async function init() {
-        const modelURL = URL + "model.json";
-        const metadataURL = URL + "metadata.json";
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
 
-        // load the model and metadata
-        // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
-        // or files from your local hard drive
-        // Note: the pose library adds "tmImage" object to your window (window.tmImage)
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-        // Convenience function to setup a webcam
-        const flip = true; // whether to flip the webcam
-        webcam = new tmImage.Webcam(200, 200, flip); // width, height, flip
-        await webcam.setup(); // request access to the webcam
-        await webcam.play();
-        window.requestAnimationFrame(loop);
+      const flip = true;
+      webcam = new tmImage.Webcam(300, 300, flip);
+      await webcam.setup();
+      await webcam.play();
+      window.requestAnimationFrame(loop);
 
-        // append elements to the DOM
-        document.getElementById("webcam-container").appendChild(webcam.canvas);
-        labelContainer = document.getElementById("label-container");
-        for (let i = 0; i < maxPredictions; i++) { // and class labels
-            labelContainer.appendChild(document.createElement("div"));
-        }
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
     }
 
     async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
+      webcam.update();
+      await predict();
+      window.requestAnimationFrame(loop);
     }
 
-    // run the webcam image through the image model
     async function predict() {
-        // predict can take in an image, video or canvas html element
-        const prediction = await model.predict(webcam.canvas);
-        for (let i = 0; i < maxPredictions; i++) {
-            const classPrediction =
-                prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-            labelContainer.childNodes[i].innerHTML = classPrediction;
+      const prediction = await model.predict(webcam.canvas);
+
+      let best = prediction[0];
+      for (let i = 1; i < prediction.length; i++) {
+        if (prediction[i].probability > best.probability) {
+          best = prediction[i];
         }
+      }
+
+      let resultText = "";
+      if (best.className.toLowerCase().includes("left")) {
+        resultText = "왼쪽";
+      } else if (best.className.toLowerCase().includes("right")) {
+        resultText = "오른쪽";
+      } else {
+        resultText = "알 수 없음";
+      }
+
+      document.getElementById("result-display").innerText = resultText;
+
+      // 이전 결과와 다르면 음성 출력
+      if (resultText !== lastResult && (resultText === "왼쪽" || resultText === "오른쪽")) {
+        speak(resultText);
+        lastResult = resultText;
+      }
     }
-</script>
+
+    function speak(text) {
+      const synth = window.speechSynthesis;
+      const utter = new SpeechSynthesisUtterance(text);
+      utter.lang = "ko-KR";
+      synth.cancel(); // 이전 음성 취소
+      synth.speak(utter);
+    }
+  </script>
+
 </body>
 </html>
 </body>
-</html>
-</body>
-</html>
-</body>
-</html>
-</body>
-</html></body>
 </html>
