--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<html>
-<head>
-<title>연습용 페이지</title>
-</head>
-<body>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -11,30 +6,32 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f0f4f8, #e0f2fe);
+      background: linear-gradient(to right, #f0f4f8, #e0f7fa);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
 
-    .container {
-      background-color: white;
+    .card {
+      background: #fff;
       padding: 2rem;
       border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
       text-align: center;
-      max-width: 400px;
+      width: 360px;
     }
 
     h1 {
-      color: #1e40af;
       font-size: 1.8rem;
+      color: #1e3a8a;
       margin-bottom: 0.5rem;
     }
 
     p {
+      font-size: 1rem;
       color: #475569;
       margin-bottom: 1.5rem;
     }
@@ -44,8 +41,8 @@
       color: white;
       border: none;
       padding: 10px 20px;
-      border-radius: 8px;
       font-size: 1rem;
+      border-radius: 8px;
       cursor: pointer;
       margin-bottom: 1rem;
     }
@@ -55,25 +52,25 @@
     }
 
     #webcam-container {
-      margin: 1rem 0;
+      margin-top: 1rem;
     }
 
     #label-container {
-      font-size: 1.3rem;
+      margin-top: 1rem;
       font-weight: bold;
       color: #10b981;
-      margin-top: 1rem;
+      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <div class="card">
     <h1>왼쪽/오른쪽 식별 인공지능</h1>
-    <p>고개를 옆으로 기울여 보세요</p>
-    <button type="button" onclick="init()">Start</button>
+    <p>고갤를 기울여 보세요.</p>
+    <button onclick="init()">Start</button>
     <div id="webcam-container"></div>
-    <div id="label-container">결과가 여기에 표시됩니다</div>
+    <div id="label-container">결과가 여기에 표시됩니다.</div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
@@ -96,6 +93,7 @@
 
       document.getElementById("webcam-container").appendChild(webcam.canvas);
       labelContainer = document.getElementById("label-container");
+      labelContainer.innerHTML = "분석 중...";
     }
 
     async function loop() {
@@ -106,20 +104,18 @@
 
     async function predict() {
       const prediction = await model.predict(webcam.canvas);
-      let left = prediction.find(p => p.className.toLowerCase().includes("left"));
-      let right = prediction.find(p => p.className.toLowerCase().includes("right"));
+      let resultText = "";
 
-      if (left && left.probability > 0.5) {
-        labelContainer.innerText = "왼쪽";
-      } else if (right && right.probability > 0.5) {
-        labelContainer.innerText = "오른쪽";
-      } else {
-        labelContainer.innerText = "고개를 옆으로 기울여 보세요.";
+      for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction =
+          prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+        if (prediction[i].probability > 0.8) {
+          resultText = prediction[i].className;
+        }
       }
+
+      labelContainer.innerText = resultText || "인식 중...";
     }
   </script>
-
-</body>
-</html>
 </body>
 </html>
